<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Sample</string>
    <string name="app_name">HVC-C Standard Demo</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="button3">Select HVC device</string>
    <string name="button2">Parameter setting</string>
    <string name="button1">Run</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning for devices</string>
    <string name="paired">paired</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="popup_title">Quit?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="loading">Connecting to the HVC device</string>
    <string name="waiting">Please wait</string>
    <string name="popup_error">Not connected to HVC</string>
    <string name="popup_errmes">Turn HVC ON\nand please try again.</string>
    <string name="param_item">Setting items</string>
    <string name="param_button">Close</string>
    <string name="param_title1">Minimum detection size</string>
    <string name="param_title2">Maximum detection size</string>
    <string name="param_title3">Degree of confidence</string>
    <string name="param_body">Human Body Detection : </string>
    <string name="param_hand">Hand Detection : </string>
    <string name="param_face">Face Detection : </string>
    <string name="list_body">Human Body Detection</string>
    <string name="list_hand">Hand Detection</string>
    <string name="list_face">Face Detection</string>
    <string name="list_dir">Direction Estimation</string>
    <string name="list_age">Age Estimation</string>
    <string name="list_gender">Gender Estimation</string>
    <string name="gender_item1">Female</string>
    <string name="gender_item2">Male</string>
    <string name="list_gaze">Gaze Estimation</string>
    <string name="list_blink">Blink Estimation</string>
    <string name="list_exp">Expression Estimation</string>
    <string name="exp_item1">Neutral</string>
    <string name="exp_item2">Happiness</string>
    <string name="exp_item3">Surprise</string>
    <string name="exp_item4">Anger</string>
    <string name="exp_item5">Sadness</string>
    <string name="short_body">Body</string>
    <string name="short_hand">Hand</string>
    <string name="short_face">Face</string>
    <string name="short_dir">Dir.</string>
    <string name="short_age">Age</string>
    <string name="short_gender">Gender</string>
    <string name="short_gaze">Gaze</string>
    <string name="short_blink">Blink</string>
    <string name="short_exp">Exp.</string>
</resources>
